fix/scrollbar
make custom scrollbar in brand colors -always on top

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,19 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  overflow-y: scroll;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: #5ab2a6;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #eec54b;
+}
+::-webkit-scrollbar-track {
+  background-color: #5ab2a6;
 }
 
 code {
